# rust-guardian

./: .gitignore  .guardianignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SETUP.md  guardian.yaml
.github/: copilot-instructions.md  mlc_config.json
.github/workflows/: ci.yml  docs.yml  release.yml
.rust/: guardian_cache.json
examples/: guardian.yaml
src/: lib.rs  main.rs
src/analyzer/: mod.rs  rust.rs
src/cache/: mod.rs
src/config/: mod.rs
src/domain/: mod.rs  violations.rs
src/patterns/: mod.rs  path_filter.rs
src/report/: mod.rs
